<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:id="@+id/textView/address"
                android:layout_column="0"
                android:layout_span="3"
                android:layout_gravity="center_horizontal"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cityStateZip"
                android:id="@+id/textView/cityStateZip"
                android:layout_column="0"
                android:layout_span="3"
                android:layout_gravity="center_horizontal"/>

    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

        <ImageButton
                android:layout_width="140dp"
                android:layout_height="85dp"
                android:id="@+id/imageButton/home/topLeft"
                android:layout_column="0"/>

        <ImageButton
                android:layout_width="140dp"
                android:layout_height="85dp"
                android:id="@+id/imageButton/home/topCenter"
                android:layout_column="1"
                android:adjustViewBounds="false"/>

        <ImageButton
                android:layout_width="140dp"
                android:layout_height="85dp"
                android:id="@+id/imageButton/home/topRight"
                android:layout_column="2"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

        <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/imageButton/home/bottomLeft"
                android:layout_column="0"/>

        <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/imageButton/home/bottomCenter"
                android:layout_column="1"/>

        <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/imageButton/home/bottomRight"
                android:layout_column="2"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:id="@+id/textView/home/speed"
                android:layout_column="0"
                android:layout_span="1"
                android:layout_gravity="center_horizontal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeElapsed"
                android:id="@+id/textView/home/timeElapsed"
                android:layout_column="1"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:id="@+id/textView1"
                android:layout_column="2"/>
    </TableRow>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driveTime"
                android:id="@+id/textView"
                android:layout_column="1"/>
    </TableRow>
</TableLayout>